--- a/app/views/admin/bike_codes/index.html.haml
+++ b/app/views/admin/bike_codes/index.html.haml
@@ -5,7 +5,7 @@
 
   / We only show this if there aren't any sortable search params, or there is a search_bike_code_batch_id, because performance
   - if !sortable_search_params? || params[:search_bike_code_batch_id].present?
-    - bike_code_batches = BikeCodeBatch.includes(:user, :organization)
+    - bike_code_batches = BikeCodeBatch.includes(:user, :organization).reorder(id: :desc)
     .col-12.mt-4
       %h5
         = number_with_delimiter(bike_code_batches.count)
@@ -24,7 +24,10 @@
               Organization
             %th
               %small
-                count/claimed
+                count
+            %th
+              %small
+                claimed
             %th
               Notes
           %tbody
@@ -36,13 +39,21 @@
                   %span.convertTime
                     = l bike_code_batch.created_at, format: :convert_time
                 %td
-                  - if bike_code_batch.user.present?
-                    = bike_code_batch.user.display_name
+                  .less-strong-hold
+                    - if bike_code_batch.user.present?
+                      = bike_code_batch.user.display_name
+                      - if current_user.developer
+                        %small.less-strong-right
+                          = bike_code_batch.user_id
                 %td
                   - if bike_code_batch.organization.present?
                     = link_to bike_code_batch.organization.name, admin_bike_codes_path(organization_id: bike_code_batch.organization_id)
                 %td
-                  #{number_with_delimiter(bike_code_batch.bike_codes.count)} / #{number_with_delimiter(bike_code_batch.bike_codes.claimed.count)}
+                  %small
+                    = number_with_delimiter(bike_code_batch.bike_codes.count)
+                %td
+                  %small
+                    = number_with_delimiter(bike_code_batch.bike_codes.claimed.count)
                 %td
                   = bike_code_batch.notes
 
@@ -88,6 +99,8 @@
 
 = paginate @bike_codes, views_prefix: "admin"
 
+- bike_code_batch_organizations = BikeCodeBatch.all.map { |b| [b.id.to_s, b.organization&.short_name] }.to_h
+
 .full-screen-table
   %table.table.table-striped.table-bordered.table-sm.without-exterior-border
     %thead.small-header
@@ -119,6 +132,8 @@
           %td
             - if bike_code.bike_code_batch.present?
               = link_to bike_code.bike_code_batch_id, admin_bike_codes_path(sortable_search_params.merge(search_bike_code_batch_id: bike_code.bike_code_batch_id))
+              %small.less-strong
+                = bike_code_batch_organizations[bike_code.bike_code_batch_id.to_s]
           %td
             - if bike_code.claimed? && bike_code.claimed_at.present?
               %span.convertTime
