Fix #gsub invocations on nil

--- a/app/views/admin/organizations/_admin_organizations_table.html.haml
+++ b/app/views/admin/organizations/_admin_organizations_table.html.haml
@@ -53,7 +53,7 @@
               = link_to organization.kind.humanize, admin_organizations_path(sortable_search_params.merge(search_kind: organization.kind))
             %td
               - if organization.bike_shop?
-                = link_to organization.pos_kind.gsub("pos", "").humanize, admin_organizations_path(sortable_search_params.merge(search_pos_kind: organization.pos_kind)), class: "gray-link"
+                = link_to organization.pos_kind.to_s.gsub("pos", "").humanize, admin_organizations_path(sortable_search_params.merge(search_pos_kind: organization.pos_kind)), class: "gray-link"
             %td
               .less-strong-hold
 
