--- a/app/views/shared/_footer_revised.html.haml
+++ b/app/views/shared/_footer_revised.html.haml
@@ -81,7 +81,7 @@
         and #{link_to "terms and conditions", terms_path}.
       %p
         %span{data: {license: "https://github.com/bikeindex/bike_index/blob/master/LICENSE"}}
-          #{Time.zone.now.year} &copy; Bike Index, a 501(c)(3) nonprofit - EIN 81-4296194
+          #{Time.current.year} &copy; Bike Index, a 501(c)(3) nonprofit - EIN 81-4296194
 - cache 'facebook_pixel' do
   = render '/shared/facebook_pixel'
 
