--- a/app/views/shared/_footer_updated.html.haml
+++ b/app/views/shared/_footer_updated.html.haml
@@ -38,7 +38,7 @@
 
     %p
       %span{data: {license: "https://github.com/bikeindex/bike_index/blob/master/LICENSE"}}
-        #{Time.zone.now.year} &copy; Bike Index.
+        #{Time.current.year} &copy; Bike Index.
       - if current_user.present? && current_user.has_membership?
         #{link_to "Privacy policy", privacy_path}, #{link_to "vendor terms", vendor_terms_path}
       - else
