--- a/app/views/layouts/application_revised.html.haml
+++ b/app/views/layouts/application_revised.html.haml
@@ -49,6 +49,8 @@
                   %li
                     - bulk_link_name = passive_organization.ascend_imports? ? "Ascend Imports" : "Bulk Imports"
                     = active_link bulk_link_name, organization_bulk_imports_path(organization_id: passive_organization.to_param), match_controller: true, class: "nav-link"
+                - if passive_organization.lightspeed_pos?
+                  = active_link "Lightspeed Integration Panel", lightspeed_interface_path, class: "nav-link"
                 - if passive_organization.paid_for?("bike_codes")
                   %li.divider-nav-item
                   %li
