--- a/app/assets/stylesheets/revised/pages/bikes/stolen_checklist.scss
+++ b/app/assets/stylesheets/revised/pages/bikes/stolen_checklist.scss
@@ -26,18 +26,21 @@
       line-height: 1;
       padding: 0.1em;
     }
-  }
-
-  li.completed-item:before {
-    // background-color: #3498db;
-    // border-color: #ffffff;
-    color: #919197;
-    content: "\2713";
-    font-family: "zp-icons";
-    font-style: normal;
-    font-variant: normal;
-    font-weight: normal;
-    text-rendering: optimizeLegibility;
-    text-transform: none;
+    &.completed-item {
+      text-decoration: line-through;
+      opacity: 0.75;
+      &:before {
+        // background-color: #3498db;
+        // border-color: #ffffff;
+        color: #919197;
+        content: "\2713";
+        font-family: "zp-icons";
+        font-style: normal;
+        font-variant: normal;
+        font-weight: normal;
+        text-rendering: optimizeLegibility;
+        text-transform: none;
+      }
+    }
   }
 }
