--- a/app/views/admin/payments/new.html.haml
+++ b/app/views/admin/payments/new.html.haml
@@ -1,40 +1,35 @@
 %h1
   New Payment
 
-.form.form-horizontal{ style: "margin-bottom: 120px" }
-  = form_for [:admin, @payment] do |f|
-    - if @payment.errors.any?
-      = render partial: "/shared/errors", locals: { name: "Payment", obj: @payment }
+= form_for [:admin, @payment] do |f|
+  - if @payment.errors.any?
+    = render partial: "/shared/errors", locals: { name: "Payment", obj: @payment }
 
-    .control-group.padded
-      .control-label
+  .row
+    .col-md-6
+      .form-group.fancy-select.unfancy
         = f.label :kind
-      .controls
         = f.select :kind, Payment.admin_creatable_kinds.map { |k| [k.humanize, k] }
-
-    .control-group.padded
-      - f.object.created_at = TimeParser.round(f.object.created_at || Time.current)
-      .control-label
+    .col-md-6
+      .form-group
+        - f.object.created_at = TimeParser.round(f.object.created_at || Time.current)
         = f.label :created_at, "Time of payment"
-      .controls
         = f.datetime_local_field :created_at, max: Time.current + 1.week, step: 60, required: true, class: 'form-control'
-
-    .control-group.padded
-      .control-label
-        = f.label :amount
-      .controls
-        = f.number_field :amount, step: 1, min: 0
-
-    .control-group.padded
-      .control-label
+    .col-md-6
+      = f.label :amount
+      .input-group
+        .input-group-prepend
+          %span.input-group-text
+            $
+        = f.number_field :amount, step: 1, min: 0, class: "form-control"
+    .col-md-6
+      .form-group
         = f.label :email, "Email of user who created payment"
-      .controls
-        = f.email_field :email
-
-    - organizations = Organization.all
-    .control-group.chosen-select
-      = f.label :organization_id, class: "control-label"
-      .controls
+        = f.email_field :email, class: "form-control"
+    .col-md-6
+      - organizations = Organization.all
+      .form-group.fancy-select.unfancy
+        = f.label :organization_id, class: "control-label"
         = collection_select(:payment, :organization_id, organizations, :id, :name, prompt: "Choose organization")
-
-    = f.submit "Submit", class: 'button-green'
+    .col-md-6.mt-4
+      = f.submit "Submit", class: 'btn btn-success float-right'
