--- a/app/views/info/dev_and_design.html.haml
+++ b/app/views/info/dev_and_design.html.haml
@@ -1,28 +1,37 @@
-%h5
-  Bike Index is meant to be usable and expandable by everyone. We're way into the open source.
+%h5 Bike Index is meant to be usable and expandable by everyone. We're way into the open source.
 
-%h3.mt-4
-  Design resources
+%h3.mt-4 Design resources
+
 %ul
   %li
-    #{link_to "Image assets", image_resources_path} - vector and png Bike Index logos
+    = image_assets_link = link_to "Image assets", image_resources_path
+    = "#{image_assets_link} - vector and png Bike Index logos".html_safe
   %li
-    #{link_to "Trifold Flyer", "https://files.bikeindex.org/stored/Bike-Index-TriFold.pdf"} - Print color & double-sided (<em>do not</em> rescale, have printer print as close to the edges as it can)
+    - flyer_pdf_url =  "https://files.bikeindex.org/stored/Bike-Index-TriFold.pdf"
+    - trifold_flyer_link = link_to "Trifold Flyer", flyer_pdf_url
+    = "#{trifold_flyer_link} - Print color & double-sided (<em>do not</em> rescale, have printer print as close to the edges as it can)".html_safe
   %li
-    #{link_to "Bike shop card", "https://files.bikeindex.org/stored/Bike-Index-Shop-Card.pdf"} - design is for notecard size (5.5" x 4.25")
+    - bike_shop_card_url = "https://files.bikeindex.org/stored/Bike-Index-Shop-Card.pdf"
+    = bike_shop_card_link = link_to "Bike shop card", bike_shop_card_url
+    = "#{bike_shop_card_link} - design is for notecard size (5.5\" x 4.25\")"
 
 %h3.mt-4 Development resources
 %ul
   %li
-    Bike Index itself is open source - check it out #{ link_to "on GitHub", "https://github.com/bikeindex/bike_index" }.
+    - github_link = link_to "on GitHub", "https://github.com/bikeindex/bike_index"
+    = "Bike Index itself is open source - check it out #{github_link}."
   %li
     = link_to "Our API documentation", documentation_index_path
   %li
-    #{ link_to "Nearby stolen widget", "https://github.com/bikeindex/stolen_bikes_widget_html" } (on GitHub)
+    - nearby_stolen_widget_link = link_to "Nearby stolen widget", "https://github.com/bikeindex/stolen_bikes_widget_html"
+    = "#{nearby_stolen_widget_link} (on GitHub)".html_safe
   %li
     - url_for_embed = current_user ? user_embed_path(current_user) : new_user_url(return_to: dev_and_design_path)
-    #{link_to "Personal bike display widget", url_for_embed} (must be logged in - also, has no usage instructions...)
+    - display_widget_link = link_to "Personal bike display widget", url_for_embed
+    = "#{display_widget_link} (must be logged in - also, has no usage instructions...)".html_safe
   %li
-    #{link_to "OAuth Applications you've made", oauth_applications_path} (must be logged in)
+    - oauth_apps_link = link_to "OAuth Applications you've made", oauth_applications_path
+    = "#{oauth_apps_link} (must be logged in)".html_safe
   %li
-    #{link_to "OAuth Applications you've authorized", oauth_authorized_applications_path} (must be logged in)
+    - oauth_authorized_apps_link = link_to "OAuth Applications you've authorized", oauth_authorized_applications_path
+    = "#{oauth_authorized_apps_link} (must be logged in)".html_safe
