--- a/app/views/admin/recovery_displays/index.html.haml
+++ b/app/views/admin/recovery_displays/index.html.haml
@@ -38,7 +38,7 @@
               %a.convertTime{ href: edit_admin_recovery_display_url(recovery_display) }
                 = l recovery_display.date_recovered, format: :convert_time
               %small.less-strong-right
-                = recovery_display.bike && recovery_display.bike.id
+                = recovery_display.id
           %td
             %small.convertTime
               = l recovery_display.updated_at, format: :convert_time
