--- a/app/views/landing_pages/ambassadors_how_to.html.haml
+++ b/app/views/landing_pages/ambassadors_how_to.html.haml
@@ -5,10 +5,14 @@
     .container
       .row
         .icon-wrapper
-          = render "/landing_pages/icons/header_ambassadors_svg"
+          = render "landing_pages/icons/header_ambassadors_svg"
+
         .banner-text
-          %h1 Become a Bike Index Ambassador
-          %h2 Want to help fight bike theft in your community?<br>Start here!
+          %h1= t(".become_a_bike_index_ambassador")
+          %h2
+            = t(".want_to_help_fight_bike_theft_in_your_com")
+            %br
+            = t(".start_here")
 
     .ribbon
       .container
@@ -17,89 +21,93 @@
   .container
     .row.main-body-row
       .landing-why-col
-        %h3#ambassadors_why Why Work With Bike Index?
+        %h3#ambassadors_why= t(".why_work_with_bike_index")
         %p
-          Bike Index is a nonprofit with a big mission: register every bicycle out there, and recover every bike that gets stolen. That’s why we need your help. We’re a national registry but you know your cycling communities best.
+          = t(".bike_index_is_a_nonprofit_with_a_big_miss")
+
         %p
-          Anyone can help Bike Index. We are always in need of donations, connections to local bike shops and other organizations, and shares on social media. But maybe you know of a great shop or a budding advocacy group in your town that would love to register bikes for their users and constituents. Or maybe your local police department is looking to upgrade their registry. (Or maybe they don’t even have one yet).
+          = t(".anyone_can_help_bike_index_we_are_always_")
 
         %p.mb-4
-          You bring the ideas, make the connections, and we’ll make sure you have the resources to get stuff done.
+          = t(".you_bring_the_ideas_make_the_connections_")
 
-        = link_to "Apply to be an ambassador here", new_ambassador_path, class: "btn btn-primary"
+        = link_to t(".apply_to_be_an_ambassador_here"), new_ambassador_path, class: "btn btn-primary"
 
         = image_tag 'landing_pages/ambassador_1.jpg', alt: 'A Bike Index Ambassador', class: "mt-4"
 
-        %h3#ambassadors_how How it Works
+        %h3#ambassadors_how= t(".how_it_works")
 
         %p
-          We provide you with the resources to make Bike Index a reality in your community. Each level of ambassadorship receives:
+          = t(".we_provide_you_with_the_resources_to_make")
         %ul
           %li
-            Access to ambassadors slack channel for sharing ideas, tips, and success stories among the Bike Index team and other ambassadors around the country and world
+            = t(".access_to_ambassadors_slack_channel_for_s")
           %li
-            A basic package of materials including a Bike Index cycling cap and stickers
+            = t(".a_basic_package_of_materials_including_a_")
           %li
-            Give you shoutouts on social media
+            = t(".give_you_shoutouts_on_social_media")
 
         %p
-          To become a Bike Index Ambassador, fill out the application above. If we approve your application - and why wouldn’t we?! - Then, all you need to do is connect us with your local cycling organizations. No organization is off the table, so be creative.
+          = t(".to_become_a_bike_index_ambassador_fill_ou")
 
         %h3#ambassador_activities
-          Typical ambassador activities include:
+          = t(".typical_ambassador_activities_include")
 
         %ul
           %li
-            Monitoring online sales platforms like Craigslist and Offerup for suspicious bikes, and checking to see if those bikes are listed as stolen on Bike Index.
+            = t(".monitoring_online_sales_platforms_like_cr")
           %li
-            Share Bike Index on social channels - including Facebook cycling groups in your area.
+            = t(".share_bike_index_on_social_channels_inclu")
           %li
-            Follow Bike Index on twitter, facebook, and instagram so we can follow you back!
+            = t(".follow_bike_index_on_twitter_facebook_and")
           %li
-            Get bike shops signed up for Bike Index using one of our
-            = link_to "POS integrations", "http://bikeindex.org/for_shops"
+            = t(".get_bike_shops_signed_up_for_bike_index_u")
+            = link_to t(".pos_integrations"), for_shops_path
           %li
-            Connect us with city officials, law enforcement and local universities interested in using Bike Index as the area’s official registration system
+            = t(".connect_us_with_city_officials_law_enforc")
 
         %p
-          Join our list of ambassadors and advocates. It’s easy. We’re a growing nonprofit with a mission to register and recovery bikes. Join us today.
+          = t(".join_our_list_of_ambassadors_and_advocate")
 
         %p
-          Check out our media resources
-          = link_to "here.", "http://bikeindex.org/resources"
+          = t(".check_out_our_media_resources")
+          = link_to t(".here"), resources_path
         %p
-          Relevant articles:
+          = t(".relevant_articles")
         %p
-          = link_to "9 steps for getting your stolen bike back", "https://bikeindex.org/news/9-steps-for-getting-your-stolen-bike-back"
+          = link_to t(".9_steps_for_getting_your_stolen_bike_back"),
+            news_path("9-steps-for-getting-your-stolen-bike-back")
         %p
-          = link_to "Bike Index launches new ambassador program", "https://bikeindex.org/news/bike-index-launches-ambassadors-program"
+          = link_to t(".bike_index_launches_new_ambassador_progra"),
+            news_path("bike-index-launches-ambassadors-program")
         %p
-          = link_to "Be a bike saver", "https://bikeindex.org/news/be-a-bike-saver---donate-to-bike-index-on-giving-tuesday"
+          = link_to t(".be_a_bike_saver"),
+            news_path("be-a-bike-saver---donate-to-bike-index-on-giving-tuesday")
 
         %h3#current_ambassadors
-          =link_to "View current ambassadors", ambassadors_current_path
+          =link_to t(".view_current_ambassadors"), ambassadors_current_path
 
         .mobile-contact-link
           %a.btn.btn-primary.btn-lg{ href: new_ambassador_path }
-            Apply today
+            = t(".apply_today")
 
       .next-steps-col
         .next-steps-wrap
           .trusted-by
             %h3
-              Become an ambassador
+              = t(".become_an_ambassador")
             %ul
               %li
                 %a{ href: '#ambassadors_why', class: 'scroll-to-ref', data: { offset: -80 } }
-                  Why Work with Bike Index
+                  = t(".why_work_with_bike_index")
               %li
                 %a{ href: '#ambassadors_how', class: 'scroll-to-ref', data: { offset: -80 } }
-                  How it works
+                  = t(".how_it_works")
               %li
                 %a{ href: '#ambassador_activities', class: 'scroll-to-ref', data: { offset: -80 } }
-                  Typical ambassador activities
+                  = t(".typical_ambassador_activities")
               %li
                 %a{ href: ambassadors_current_path }
-                  Current ambassadors
+                  = t(".current_ambassadors")
           %a.btn.btn-primary.btn-lg{ href: 'https://docs.google.com/forms/d/e/1FAIpQLSenRXqarY4KFNw1AQ3u5iHwIaaIpgy6cb1sD3YTSQiR0ICeCQ/viewform' }
-            Apply Today
+            = t(".apply_today")
